# WindowsMessageTest

./: .gitignore  CMakeLists.txt  qml.qrc
src/: main.cpp  server_main.cpp
src/database/: message_store.cpp  message_store.hpp
src/network/: chat_client.cpp  chat_client.hpp  chat_server.cpp  chat_server.hpp  chat_session.cpp  chat_session.hpp  main_window.hpp  message.cpp  message.hpp
src/ui/: login_dialog.cpp  login_dialog.hpp  main_window.cpp  main_window.hpp
